--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ Description: Our 2015 default theme is clean, blog-focused, and designed for cla
 Version: 1.0
 Tags: black, blue, gray, pink, purple, white, yellow, dark, light, two-columns, left-sidebar, fixed-layout, responsive-layout, accessibility-ready, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, threaded-comments, translation-ready
 Text Domain: passeridae
+Theme URI: https://wordpress.org/themes/popuppigeon
+Author URI: https://pgogywebstuff.com/
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
 css in css/main.css
 
